@@ -17,6 +17,7 @@ CHANGELOG Roundcube Webmail
 - Fix unintentional messages list page change on page switch in compose addressbook (#1490427)
 - Fix race-condition in saving user preferences and loading plugin config (#1490431)
 - Fix so plain text signature field uses monospace font (#1490435)
+- Fix so links with href == content aren't added to links list on html to text conversion (#1490434)
 
 RELEASE 1.1.2
 -------------
